new plugin: update

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+30.05.2003
+- new plugin, able to check for new releases (update/shasta)
+
 28.05.2003
 - divider value in chat window is now % (GUI/krzak)
 - add an option to set more than one away statuses (all but icq/zapal)
