--- a/po/pl.po
+++ b/po/pl.po
@@ -1,11 +1,11 @@
-# $Id: pl.po,v 1.22 2003/05/30 11:44:43 shaster Exp $
+# $Id: pl.po,v 1.23 2003/05/30 13:34:04 shaster Exp $
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Igor Popik <thrull@slackware.pl>, 2002.
 msgid ""
 msgstr ""
 "Project-Id-Version: gg2 2.0_CVS\n"
-"POT-Creation-Date: 2003-05-30 13:42+0200\n"
+"POT-Creation-Date: 2003-05-30 15:30+0200\n"
 "PO-Revision-Date: 2003-03-19 19:16+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -197,6 +197,7 @@ msgstr "Wiadomo¶ci wychodz±ce:"
 #: src/plugins/tlen/tlen_plugin.c:651 src/plugins/xosd/plugin_xosd.c:311
 #: src/plugins/jabber/jabber_plugin.c:462
 #: src/plugins/remote/remote_plugin.c:616 src/plugins/sms/sms_gui.c:161
+#: src/plugins/update/update_plugin.c:280
 msgid "Preferences"
 msgstr "Ustawienia"
 
@@ -1095,6 +1096,74 @@ msgstr "Wy¶lij SMS (wewnêtrznie)"
 #: src/plugins/sms/sms_gui.c:437
 msgid "Send SMS (external)"
 msgstr "Wy¶lij SMS (zewnêtrznie)"
+
+#: src/plugins/update/update_plugin.c:73 src/plugins/update/update_plugin.c:76
+#, c-format
+msgid "Unknown host: %s"
+msgstr "Nieznany host: %s"
+
+#: src/plugins/update/update_plugin.c:104
+#: src/plugins/update/update_plugin.c:107
+#, c-format
+msgid "Error while connecting to %s"
+msgstr "B³±d podczas próby po³±czenia z %s"
+
+#: src/plugins/update/update_plugin.c:144
+#: src/plugins/update/update_plugin.c:146
+msgid "Server-side error during update check"
+msgstr "B³±d serwera"
+
+#: src/plugins/update/update_plugin.c:158
+#: src/plugins/update/update_plugin.c:160
+#: src/plugins/update/update_plugin.c:172
+#: src/plugins/update/update_plugin.c:174
+msgid "Malformed server reply"
+msgstr "B³êdna odpowied¼ serwera"
+
+#: src/plugins/update/update_plugin.c:215
+#: src/plugins/update/update_plugin.c:218
+#, c-format
+msgid "Update available: %s"
+msgstr "Dostêpna aktualizacja: %s"
+
+#: src/plugins/update/update_plugin.c:215
+#: src/plugins/update/update_plugin.c:218
+msgid "[error]"
+msgstr "[b³±d]"
+
+#: src/plugins/update/update_plugin.c:244
+#: src/plugins/update/update_plugin.c:246
+msgid "No updates available"
+msgstr "Brak dostêpnych aktualizacji"
+
+#: src/plugins/update/update_plugin.c:259
+msgid "Update Preferences"
+msgstr "Ustawienia wtyczki update"
+
+#. *INDENT-OFF*
+#: src/plugins/update/update_plugin.c:264
+msgid "Check for updates automatically"
+msgstr "Automatycznie wyszukuj aktualizacji"
+
+#: src/plugins/update/update_plugin.c:265
+msgid "Check interval (minutes)"
+msgstr "Odstêp pomiêdzy sprawdzeniami (w minutach)"
+
+#: src/plugins/update/update_plugin.c:266
+msgid "Use XOSD instead of dialog boxes"
+msgstr "U¿yj XOSD zamiast okienek dialogowych"
+
+#: src/plugins/update/update_plugin.c:279
+msgid "Check for updates"
+msgstr "Sprawd¼ aktualizacje"
+
+#: src/plugins/update/update_plugin.c:352
+msgid "Update checker"
+msgstr "Sprawdzanie aktualizacji"
+
+#: src/plugins/update/update_plugin.c:366
+msgid "Unable to read config file for plugin update"
+msgstr "Nie mo¿na odczytaæ pliku z konfiguracj± wtyczki update"
 
 #~ msgid "Specify sender name and message!"
 #~ msgstr "Okre¶l nazwê nadawcy oraz wiadomo¶æ!"
