--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+01.06.2003
+- configurable autoconnect status, small cleanups (tlen/shasta)
+
 31.05.2003
 - added ability to check for updates on startup [configurable]; switched from
   gtk_timeout_* to g_timeout_*, thus got rid of gtk dependency (update/shasta)
