autoaway in minutes, not miliseconds

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+02.06.2003
+- autoaway in minutes, not miliseconds (GUI/shasta)
+
 01.06.2003
 - configurable autoconnect status, small cleanups (tlen/shasta)
 
