--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+03.06.2003
+- make install now work again and install libgg2_core.so in you lib directory (krzak)
+
 02.06.2003
 - autoaway in minutes, not miliseconds (GUI/shasta)
 - massive attack - introduce to build libgg2_core.so, install may not work now (krzak)
