--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
+- gender search (gadu-gadu/tlen/ManicMiner)
 
 02.06.2003
 - autoaway in minutes, not miliseconds (GUI/shasta)
