--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
 - gender search (gadu-gadu/tlen/ManicMiner)
+- gg2.spec update
 
 02.06.2003
 - autoaway in minutes, not miliseconds (GUI/shasta)
