--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
 - gender search (gadu-gadu/tlen/ManicMiner)
-- gg2.spec update
-- libgg2_core.h autogenerate
+- gg2.spec update (krzak)
+- libgg2_core.h autogenerate (krzak)
+- libgg2_core.pc added for pkgconfig (krzak)
 
 02.06.2003
 - autoaway in minutes, not miliseconds (GUI/shasta)
