- revolution - libgg2_core.so in "lib" directory - example plugin that can be build out the main tree in "contrib" directory - fuck automake

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - gg2.spec update (krzak)
 - libgg2_core.h autogenerate (krzak)
 - libgg2_core.pc added for pkgconfig (krzak)
+- revolution, new directory "lib", fuck automake (krzak)
 
 02.06.2003
 - autoaway in minutes, not miliseconds (GUI/shasta)
