--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+04.06.2003
+- small fixes in chat window (GUI/krzak)
+
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
 - gender search (gadu-gadu/tlen/ManicMiner)
