--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 04.06.2003
 - small fixes in chat window (GUI/krzak)
+- tlen 'add user search' handling (tlen/shasta)
 
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
