--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 04.06.2003
 - small fixes in chat window (GUI/krzak)
 - tlen 'add user search' handling (tlen/shasta)
+- fix some strange segfaults [god damn tlen.pl] (GUI/shasta)
 
 03.06.2003
 - make install now work again and install libgg2_core.so in you lib directory (krzak)
