--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+05.06.2003
+- tabbed/classic chat type fixes && segfaults--; (GUI/shasta)
+
 04.06.2003
 - small fixes in chat window (GUI/krzak)
 - tlen 'add user search' handling (tlen/shasta)
