--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+07.06.2003
+- default action on Enter, and VAR_FLAG_FOCUS that foucus selected element (GUI/krzak)
+
 06.06.2003
 - apply new auto away interval after configuration change (GUI/zapal)
 - auto away only if current status is marked as online (all/zapal)
