--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+11.06.2003
+- make it possible to specify more than one offline status (all/zapal)
+
 10.06.2003
 - 2.0-pre3
 
@@ -6,7 +9,7 @@
 - fixes (all/krzak)
 - perl is working again (core/krzak)
 - load perl scripts from ~/.gg2/perl.scripts directory instead of
-  ~/.gg2/perl.load file
+  ~/.gg2/perl.load file (core/zapal)
 
 07.06.2003
 - default action on Enter, and VAR_FLAG_FOCUS that foucus selected element (GUI/krzak)
