--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+14.06.2003
+- fixes in gtkanimlabel.c (finalizer segfault), and small fixes in GUI (GUI/krzak)
+
 13.06.2003
 - gtkanimlabel.c widget created, and scrolled descriptions (GUI/krzak)
 
