--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+19.06.2003
+- Jabber plugin switch to Loudmouth library (http://www.imendio.com/projects/loudmouth)  (Jabber/Zapal)
+
 16.06.2003
 - proxy support for gadu-gadu protocol (gadu-gadu/krzak)
 
