--- a/README
+++ b/README
@@ -7,7 +7,7 @@ To compile all plugins you need:
 - gtk+ 2.2.0 (http://gtk.org.pl/) - GUI
 - libgadu (http://dev.null.pl/ekg/) - Gadu-Gadu
 - libtlen (http://www.libtlen.eu.org) - Tlen
-- iksemel (http://iksemel.jabberstudio.org) - Jabber
+- Loudmouth (http://www.imendio.com/projects/loudmouth/) - Jabber
 - xosd (http://ignavus.net/software.html) - XOSD
 - esound (http://www.tux.org/~ricdude/EsounD.html
 
