--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20.06.2003
+- fixes in gtkanimlabel mostly (after button click, text go to clipboard) (GUI/krzak)
+
 19.06.2003
 - Jabber plugin switch to Loudmouth library (http://www.imendio.com/projects/loudmouth)  (Jabber/Zapal)
 - few fixes of warnings and fix "offline issue" in gui (GUI/krzak)
