--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20.06.2003
 - fixes in gtkanimlabel mostly (after button click, text go to clipboard) (GUI/krzak)
+- dcc file sending feature fixed, and now it really works (gadu-gadu/krzak)
 
 19.06.2003
 - Jabber plugin switch to Loudmouth library (http://www.imendio.com/projects/loudmouth)  (Jabber/Zapal)
