*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 21.06.2003
 - fixes in dcc options : [enable/disable] dcc (gadu-gadu/krzak)
+- add support for description status (jabber/zapal)
+- notify GUI about disconnection (jabber/zapal)
+- translation update (po/zapal)
 
 20.06.2003
 - fixes in gtkanimlabel mostly (after button click, text go to clipboard) (GUI/krzak)
