--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - make use of p->online_status and p->offline_status (jabber/zapal)
 - translation update (po/zapal)
 - open chat window on right click->chat (jabber/zapal)
+- allow to set jabber resource (jabber/zapal)
 
 20.06.2003
 - fixes in gtkanimlabel mostly (after button click, text go to clipboard) (GUI/krzak)
