--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 21.06.2003
 - fixes in dcc options : [enable/disable] dcc (gadu-gadu/krzak)
 - add support for description status (jabber/zapal)
-- notify GUI about disconnection (jabber/zapal)
+- notify GUI about disconnection (second fix) (jabber/zapal)
 - make use of p->online_status and p->offline_status (jabber/zapal)
 - translation update (po/zapal)
 - open chat window on right click->chat (jabber/zapal)
