*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - fixed handling of other's status description (jabber/zapal)
 - fixed handling of our status description (jabber/zapal)
 - fixed handling contact's presence after addition (jabber/zapal)
+- fixed segfault when logging in with non available status (jabber/zapal)
 
 21.06.2003
 - fixes in dcc options : [enable/disable] dcc (gadu-gadu/krzak)
