--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+23.06.2003
+- fixed handling of status (available!=free for chat) (jabber/zapal)
+
 22.06.2003
 - uff... GGaduPluginExtension stuff, completly new method using userlist menus, but now it's extensible (core/gadu-gadu/sms/GUI/krzak)
 - fixed handling of other's status description (jabber/zapal)
