--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 23.08.2003
 - load plugins in order that you set in plugins manager (core/GUI/krzak)
+- fixed segfault with dcc (gadu-gadu/emvi)
 
 22.07.2003
 - wm_class form chat window (kaneda/GUI).
