--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+11.09.2003
+- sending sms through ERA works again. Use your EraOmnix login/password
+  (48601234567/foobar or email@some.where/foobar). Note that IDEA is
+  *still* broken. (sms/shasta)
+
 23.08.2003
 - load plugins in order that you set in plugins manager (core/GUI/krzak)
 - fixed segfault with dcc (gadu-gadu/emvi)
