--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+13.09.2003
+- more emoticons
+
 12.09.2003
 - s/omnix//ig; sending to ERA uses "Basic Gateway", not Omnix.
   Unfortunately, ERA has broken email access to their gateway, so you
