--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+21.09.2003
+- sending sms to IDEA works again (sms/shasta)
+- cut +48/0 prefixes while loading userlist (sms/shasta)
+- lot of minor bugfixes, bunch of code cleanups (sms/shasta)
+
 17.09.2003
 - fix userlist sorting with non-ascii chars (GUI/shasta)
 
