--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+22.09.2003
+- another bunch of fixes and code cleanups (sms/shasta)
+- fix for short final version numbers like "2.4" (update/shasta)
+
 21.09.2003
 - sending sms to IDEA works again (sms/shasta)
 - cut +48/0 prefixes while loading userlist (sms/shasta)
