--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
+BEFORE 2.0:
+ - "gui show invisible chats" opens new windows. they should grab focus into 'input'. (GUI)
+ - userlist tree view doesn't expand/collapse rows while userlist changes (GUI)
+ - applying theme should refresh everything (it's not doing that for menubar) (GUI)
+ - add any basic history functionality (jabber/tlen)
+ - fix freebsd compilation [#includes] (mostly sound)
+ ? some kind of dcc get acknowledge dialog box (gadu-gadu)
+
+Later:
 - current status description text somewhere
 - docklet menu (??)
 - memory leaks audit (all)
