--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 - load all plugins if there's no modules.load. this fixes a nasty bug,
   (affecting mostly new users, without ~/.gg2) where gg2 could eat 100% cpu
   trying to read nonexistant modules.load file. (lib/shasta)
+- include sys/soundcard.h rather than linux/soundcard.h. I hope it will
+  resolve FreeBSD compilation issue. (sound-oss/shasta)
 
 27.09.2003
 - FREE MALLOCS! [strajk edyszyn] (sms/update/shasta)
