--- a/AUTHORS
+++ b/AUTHORS
@@ -61,5 +61,6 @@ update
 ----------------------------------------------------------------
 -- THANKS FOR --------------------------------------------------
 ----------------------------------------------------------------
-Aflinta - gettext patch, testing
-Dwuziu  - testing
+Aflinta      - gettext patch, testing
+Dwuziu       - testing
+Piotr Smyrak - FreeBSD stuff
