--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+27.10.2003
+- do not load .gg/config_test if --disable-debug (gadu-gadu/krzak)
+
 17.10.2003
 - when changing status to a descriptive one, ask for the description
   everytime [even if disconnected]. provides (hopefully) current
