--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+3.11.2003
+- configure does not stop with an error when libgadu or loudmouth not found (THrull)
+
 31.10.2003
 - NEW docklet-dockapp plugin (by emvi) 
   (without this part of patch that change GUI plugin yet)
