--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+6.11.2003
+- toolbar added, we need think about it's usability... (GUI/THrull)
+
 3.11.2003
 - configure does not stop with an error when libgadu or loudmouth not found (THrull)
 - aRts headers search with "artsc-config" (krzak)
