- toolbar can be hidden with preferences option

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.11.2003
+- toolbar can be hidden with preferences option (GUI/THrull)
 - toolbar added, we need think about it's usability... (GUI/THrull)
 
 3.11.2003
