sending to IDEA fixed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+7.11.2003
+- sending to IDEA fixed (sms/shasta)
+
 6.11.2003
 - toolbar can be hidden with preferences option (GUI/THrull)
 - toolbar added, we need think about it's usability... (GUI/THrull)
