--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-14.11.2003
-- support for libgadu 1.4 (protocol_version = GG_DEFAULT_PROTOCOL_VERSION) (gadu-gadu/krzak)
+16.11.2003
+- support for libgadu 1.4 (gadu-gadu/krzak)
 
 9.11.2003
 - added show/hide inactive button to toolbar (GUI/THrull)
