--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+19.11.2003
+- fixed status notify with libgadu 1.4 (gadu-gadu/krzak) 
+
 17.11.2003
 - bumped up required libgadu version (configure/THrull)
 
