. changes by emvi

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+26.11.2003
+- small fixes (emvi)
+
+25.11.2003
+- DEVEL <=>  HEAD merge (Thrull)
+
 19.11.2003
 - fixed status notify with libgadu 1.4 (gadu-gadu/krzak) 
 
