--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 11.12.2003
 - userlist import/export work again (gadu-gadu/krzak)
 - userlist menu order changed (gadu-gadu/krzak)
+- setting status description fixes (jabber/krzak)
 
 01.12.2003
 - HOME_ETC support (CONFIG_DIR already supported) (krzak/All)
