--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+13.12.2003
+- fixed segfault with "chat" option and perl support enabled (THrull/core)
+
 11.12.2003
 - userlist import/export work again (gadu-gadu/krzak)
 - userlist menu order changed (gadu-gadu/krzak)
