--- a/AUTHORS
+++ b/AUTHORS
@@ -33,11 +33,16 @@ Tlen		(http://www.tlen.pl)
 
 
 Jabber		(http://www.jabber.org)
+		: Bartosz Zapa³owski 	<bartek@klepisko.eu.org>
 		: Marcin Krzy¿anowski	<krzak@linux.net.pl>
 
 Docklet 	
 		: Marcin Krzy¿anowski	<krzak@linux.net.pl>
 		: Mateusz Papiernik	<mati@mati.rm.pl>
+		: Igor Popik		<igipop@wsfiz.edu.pl>
+
+Dockapp		: emvi			<wamarek@poczta.onet.pl>
+		  Jaroslaw Wypychowski	<jarwyp@7bulls.com>
 
 XOSD 		
 		: Marcin Krzy¿anowski	<krzak@linux.net.pl>
