--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+17.12.2003
+- fixed compilation issue with gcc-2.95	(sebo/all)
+
 13.12.2003
 - fixed segfault with "chat" option and perl support enabled (THrull/core)
 
