--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+21.12.2003
+- changes in API, config_* functions renamed to ggadu_config_* 
+  and stored in ggadu_conf.{c,h} (all/krzak)
+
 17.12.2003
 - fixed compilation issue with gcc-2.95	(sebo/all)
 
