--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 23.12.2003
+- aRts detection in configure fix, --with-arts-prefix option added (THrull/configure)
 - fixed problem with main window decoration on some WM's (GUI/krzak)
 
 21.12.2003
