--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 - remove old and not working icqlib plugin... (icq/THrull)
 
 23.12.2003
-- aRts detection in configure fix, --with-arts-prefix option added (configure/THrull)
+- aRts! detection in configure fix, --with-arts-prefix option added (configure/THrull)
 - fixed problem with main window decoration on some WM's (GUI/krzak)
 
 21.12.2003
