--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+28.12.2003
+- remove sound_* variables support with gadu-gadu separated config file (gadu-gadu/krzak)
+- UI improvements - nothing important (GUI/krzak)
+
 27.12.2003
 - remove old and not working icqlib plugin... (icq/THrull)
 
