--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
-04.12.2003
+05.01.2004
+- fixed segfault when emoticon file was not found (GUI/THrull)
+
+04.01.2004
 - more work with jabber protocol plugin, soon will be finished (jabber/krzak)
 - ggadu_userlist_remove_id(GSList *userlist, gchar *id);
   GGaduContact *ggadu_find_contact_in_userlist (GSList * list,gchar * id);
   (support.c) (core/krzak)
 
-03.12.2003
+03.01.2004
 - fixed strang baheviour when show/hide inactive button pressed many times (GUI/THrull)
 - non-existent emoticons will be ignored (GUI/THrull)
 - work in progress with jabber protocol plugin (jabber/krzak)
