--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+06.01.2004
+- jabber plugin finished, a lot o work has been done imho.
+  Seems work as I expect, testing welcome (jabber/krzak)
+- allow to specify optional server you want connect to (jabber/krzak)
+- deleted jabber_subscribe.png
+- added jabber_error.png
+
 05.01.2004
 - fixed segfault when emoticon file was not found (GUI/THrull)
 - fixed segfault in dockapp destroy_plugin() (dockapp/THrull)
