added some of long awaited docklet functionality

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+07.01.2004
+- fixed some memory leaks (gadu-gadu/THrull)
+- added some of long-awaited functionality to docklet (docklet/THrull)
+
 06.01.2004
 - jabber plugin finished, a lot o work has been done imho.
   Seems work as I expect, testing welcome (jabber/krzak)
