--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 09.01.2004
 - sms plugin uses threads now for network operations (sms/shasta)
+- fixed disconnect handling and server value changing (jabber/krzak)
 
 08.01.2004
 - fixed `private` setting usage with autoconnect (gadu-gadu/shasta)
