--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - sms plugin uses threads now for network operations (sms/shasta)
 - fixed disconnect handling and server value changing (jabber/krzak)
 - fixed segfault with gadu-gadu connection (gadu-gadu/krzak)
+- more new goodies in docklet systray (docklet/THrull)
 
 08.01.2004
 - fixed `private` setting usage with autoconnect (gadu-gadu/shasta)
