--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 - fixed disconnect handling and server value changing (jabber/krzak)
 - fixed segfault with gadu-gadu connection (gadu-gadu/krzak)
 - more new goodies in docklet systray (docklet/THrull)
-- "Rozgwiazda" iconset as a default one
+- "Rozgwiazda" iconset as a default one (krzak)
+- History window is no longer Modal type (GUI/krzak)
 
 08.01.2004
 - fixed `private` setting usage with autoconnect (gadu-gadu/shasta)
