--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 - "Rozgwiazda" iconset as a default one (krzak)
 - History window is no longer Modal type (GUI/krzak)
 - menu items order changed (sms/krzak)
+- +48/0 prefixes stripping fixes (sms/shasta)
 
 08.01.2004
 - fixed `private` setting usage with autoconnect (gadu-gadu/shasta)
