--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10.01.2004
+- fixed sound preferences icon, docklet new message improved a bit (Maciek Gorniak/GUI)
+
 09.01.2004
 - sms plugin uses threads now for network operations (sms/shasta)
 - fixed disconnect handling and server value changing (jabber/krzak)
