fixed segfaults with malformed 'jid' and 'server' settings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 10.01.2004
-- fixed sound preferences icon, docklet new message improved a bit (Maciek Gorniak/GUI)
-- ggadu_config_var_add_with_default() allow to specify default value for variable (krzak/core)
+- fixed sound preferences icon, docklet new message improved a bit (GUI/Maciek Gorniak)
+- ggadu_config_var_add_with_default() allow to specify default value for variable (core/krzak)
 - default colors blue and brown for msg_header_color,msg_out_header_color (GUI/krzak)
 - trivial 'log' variable fix (jabber/shasta)
+- fixed segfaults with malformed 'jid' and 'server' settings (jabber/shasta)
 
 09.01.2004
 - sms plugin uses threads now for network operations (sms/shasta)
