use chat_window_width and chat_window_height settings for new chat windows

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - trivial 'log' variable fix (jabber/shasta)
 - fixed segfaults with malformed 'jid' and 'server' settings (jabber/shasta)
 - more verbose error reporting [sort of] (jabber/shasta)
+- use chat_window_width and chat_window_height settings for new chat windows (GUI/shasta)
 
 09.01.2004
 - sms plugin uses threads now for network operations (sms/shasta)
